crates/php-parser/tests/snapshots/integration__short_echo.snap
---
source: crates/php-parser/tests/integration.rs
expression: result.program
---
stmts:
  - kind:
      Echo:
        - kind:
            Variable: value
          span:
            start: 4
            end: 10
    span:
      start: 4
      end: 11
span:
  start: 0
  end: 11
