crates/php-parser/tests/snapshots/integration__single_quoted_non_ascii_with_escaped_backslash.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&_result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "String": "naïve\\path"
          },
          "span": {
            "start": 6,
            "end": 20
          }
        }
      },
      "span": {
        "start": 6,
        "end": 21
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 21
  }
}
